--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^16.13.1",
     "react-animations": "^1.0.0",
     "react-dom": "^16.13.1",
+    "react-ga": "^3.0.0",
     "react-icons": "^3.10.0",
     "react-lottie": "^1.2.3",
     "react-particles-js": "^3.2.1",
