--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.10.2",
     "@sendgrid/mail": "^7.2.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -12,7 +11,6 @@
     "axios": "^0.21.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1",
     "node-sass": "^4.14.1",
     "radium": "^0.26.0",
     "react": "^16.13.1",
@@ -20,8 +18,7 @@
     "react-dom": "^16.13.1",
     "react-ga": "^3.0.0",
     "react-icons": "^3.11.0",
-    "react-lottie": "^1.2.3",
-    "react-particles-js": "^3.2.1",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "3.4.1",
     "react-typical": "^0.1.3",
     "reactstrap": "^8.4.1"
